# CS300FinalProject

./: CMakeLists.txt  Main.qml  enterNumberPage.qml  logic.cpp  logic.h  main.cpp  surprisePage.qml
